--- a/dev/css/index.css
+++ b/dev/css/index.css
@@ -1,12 +1,20 @@
-html, body { margin:0px; width:100%; height:100%;
+html, body { margin:0px; width:100%; 
     overflow: hidden;
 }
 
+#map {
+    width: 80%;
+    /* height: 100%; */
+    position: absolute;
+    top:0;
+    bottom:0;
+}
 #baseSwitcher {
 	position: absolute;
 	z-index: 900;
 	top: 0px;
 	right: 0px;
+    bottom: 0px;
     overflow: auto;
 	/* width: 200px;
 	height: 500px; */
